--- a/bootstrap.html
+++ b/bootstrap.html
@@ -27,7 +27,7 @@
         </div>
         <div class="row">
             <h3>
-                Elige una selección para ver las imágenes
+                Elige una sección para ver más imágenes
             </h3>
         </div>
 
