add ECS from kartones, modified to suit needs

--- a/fighter/index.html
+++ b/fighter/index.html
@@ -72,12 +72,12 @@
     </div>
 
     <div class="arena" id="arenaZone">
-        <img src="images/gat.png" alt="" height="80px" id="heroRepr" style="position: absolute; top: 1000px; left: 200px;">
-        <img src="images/chopper.png" alt="" height="80px" id="enemyRepr" style="position: absolute; top: 1000px; left: 200px;">
+        <!--<img src="images/gat.png" alt="" height="80px" id="heroRepr" style="position: absolute; top: 1000px; left: 200px;">
+        <img src="images/chopper.png" alt="" height="80px" id="enemyRepr" style="position: absolute; top: 1000px; left: 200px;">-->
     </div>
 
 
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js" type="module"></script>
 
 
   </body>
