add credits to author of the base for the used ECS structure

--- a/fighter/index.html
+++ b/fighter/index.html
@@ -88,6 +88,10 @@
         
         <div class="arena" id="arenaZone">
         </div>    
+        
+    </div>
+    <div class="text-center">
+        <span>ECS structure inspired and based off of <a href="https://github.com/Kartones/ecs/tree/main">Kartones</a> example</span>
     </div>
 
     <!--<div class="arena" id="arenaZone">
