--- a/fighter/index.html
+++ b/fighter/index.html
@@ -33,6 +33,12 @@
             </div>
             <div class="col-sm-2">
                 <button class="btn btn-danger" type="button" id="resetButton">RESET</button>
+                
+                <div class="row pt-2">
+                    <div class="col-sm-12" id="musicStatus">
+                        <button class="btn btn-warning" type="button" id="stopMusic">Toggle music</button>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-5 h-50">
     
