better music play checks

--- a/fighter/index.html
+++ b/fighter/index.html
@@ -37,6 +37,7 @@
                 <div class="row pt-2">
                     <div class="col-sm-12" id="musicStatus">
                         <button class="btn btn-warning" type="button" id="stopMusic">Toggle music</button>
+                        <p id="statusParagraph"></p>
                     </div>
                 </div>
             </div>
