attempt to preload images, avoid invisible sprites

--- a/fighter/index.html
+++ b/fighter/index.html
@@ -14,6 +14,9 @@
   </head>
 
   <body>
+    <img src="images/chopper.png" alt="" hidden="true">
+    <img src="images/gat.png" alt="" hidden="true">
+    <img src="images/kinball.png" alt="" hidden="true">
     <h1 class="text-center"><strong>Fight!</strong></h1>
 
     <div class="container-fluid">
