--- a/fighter/index.html
+++ b/fighter/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editing</title>
+    <title>The final countdown</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
                         throw projectile</p>
                 </div>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" id="heroHealth" aria-valuenow="0" aria-valuemin="0"
+                    <div class="progress-bar bg-success" role="progressbar" id="heroHealth" aria-valuenow="0" aria-valuemin="0"
                         aria-valuemax="100" style="transition-duration:300ms;"></div>
                 </div>
             </div>
@@ -43,6 +43,14 @@
                         <p id="statusParagraph"></p>
                     </div>
                 </div>
+                <div class="row pt-2">
+                    <div class="col-sm-6">
+                        <button class="btn btn-primary" type="button" id="defaultMusic">Default music</button>
+                    </div>
+                    <div class="col-sm-6">
+                        <button class="btn btn-primary" type="button" id="edmMusic">EDM music</button>
+                    </div>
+                </div>
             </div>
             <div class="col-sm-5 h-50">
     
@@ -53,7 +61,7 @@
                         projectile</p>
                 </div>
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" id="enemyHealth" aria-valuenow="0" aria-valuemin="0"
+                    <div class="progress-bar bg-success" role="progressbar" id="enemyHealth" aria-valuenow="0" aria-valuemin="0"
                         aria-valuemax="100" style="transition-duration:300ms;"></div>>
                 </div>
             </div>
