--- a/fighter/index.html
+++ b/fighter/index.html
@@ -121,14 +121,12 @@
                 </div>
             </div>
         </div>-->
-
-
     </div>
 
 
     <div class="arena-container">
-
         <div class="arena" id="arenaZone">
+            <img class="arena_img" src="../images/arena.png" alt="">
         </div>
 
     </div>
