--- a/fighter/index.html
+++ b/fighter/index.html
@@ -62,12 +62,16 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
                         <button class="btn btn-primary" type="button" id="defaultMusic">Default music</button>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
+                        <button class="btn btn-primary" type="button" id="reloadedMusic">Rel Music</button>
+                    </div>
+                    <div class="col-sm-4">
                         <button class="btn btn-primary" type="button" id="edmMusic">EDM music</button>
                     </div>
+                    
                 </div>
             </div>
             <div class="col-sm-5 h-50">
