--- a/fighter/index.html
+++ b/fighter/index.html
@@ -31,7 +31,7 @@
 
     <div class="container-fluid">
         <div class="row char-stats text-center">
-            <h1 class="text-center"><strong>Fight!</strong></h1>
+            <h1 class="text-center"><strong>Fight!</strong> <a href="mods.html">(mods)</a></h1>
             <div class="col-sm-5">
 
                 <div class="row">
