mods page with examples

--- a/fighter/mods.html
+++ b/fighter/mods.html
@@ -14,7 +14,12 @@
 <body>
     <div class="container-fluid">
         <h1 class="text-center">Fighter Mutations</h1>
-        <span><a href="/fighter/?bouncingBetty">bouncingBetty</a> : Projectiles bounce off walls</span>
+        <p><span><a href="/fighter/?bouncingBetty">bouncingBetty</a> : Projectiles bounce off walls</span></p>
+        <p><span><a href="/fighter/?bouncingBetty&risingTension">risingTension</a> : Projectiles deal more damage when they bounce</span></p>
+        <p><span><a href="/fighter/?repelPhys">repelPhys</a> : As a player nears death, there's a chance a projectile will bounc off of him</span></p>
+        <p><span><a href="/fighter/?meleeOnly">meleeOnly</a> : Exactly what it says on the tin</span></p>
+        <p><span><a href="/fighter/?bouncingBetty&staticBetty">staticBetty</a> : projectiles that move in only one direction will always remain that way</span></p>
+
     </div>
     
 </body>
