change player 1 displayed controls

--- a/fighter/index.html
+++ b/fighter/index.html
@@ -43,7 +43,7 @@
                                 aria-valuemin="0" aria-valuemax="100" style="transition-duration:300ms;"></div>
                         </div>
                     </h4>
-                    <p><strong>Arrowkeys</strong> to move, <strong>SPACEBAR</strong> to melee attack, <strong>M</strong>
+                    <p><strong>Arrowkeys</strong> to move, <strong>}</strong> to melee attack, <strong>{</strong>
                         to
                         throw projectile</p>
                 </div>
