add other modifiers to list

--- a/fighter/mods.html
+++ b/fighter/mods.html
@@ -15,10 +15,12 @@
     <div class="container-fluid">
         <h1 class="text-center">Fighter Mutations</h1>
         <p><span><a href="/fighter/?bouncingBetty">bouncingBetty</a> : Projectiles bounce off walls</span></p>
-        <p><span><a href="/fighter/?bouncingBetty&risingTension">risingTension</a> : Projectiles deal more damage when they bounce</span></p>
-        <p><span><a href="/fighter/?repelPhys">repelPhys</a> : As a player nears death, there's a chance a projectile will bounc off of him</span></p>
+        <p><span><a href="/fighter/?bouncingBetty&risingTension[=value]">risingTension</a> : Projectiles deal more damage with each bounce</span></p>
+        <p><span><a href="/fighter/?repelPhys">repelPhys</a> : As a player nears death, there's a chance a projectile will bounce off of him</span></p>
         <p><span><a href="/fighter/?meleeOnly">meleeOnly</a> : Exactly what it says on the tin</span></p>
-        <p><span><a href="/fighter/?bouncingBetty&staticBetty">staticBetty</a> : projectiles that move in only one direction will always remain that way</span></p>
+        <p><span><a href="/fighter/?bouncingBetty&staticBetty">staticBetty</a> : Projectiles that move in only one direction will always remain that way</span></p>
+        <p><span><a href="/fighter/?doomMove">doomMove</a> : Diagonal movement is faster than single-direction movement</span></p>
+        <p><span><a href="/fighter/?fairGame">fairGame</a> : Players will always have the same amount of health</span></p>
 
     </div>
     
