--- a/fighter/index.html
+++ b/fighter/index.html
@@ -30,7 +30,7 @@
     <img src="images/kinball.png" alt="" hidden="true">
 
     <div class="container-fluid">
-        <div class="row char-stats text-center">
+        <div class="row text-center">
             <h2 class="text-center"><strong>Fight!</strong> <a href="mods.html">(mods)</a></h2>
             <div class="col-sm-5">
 
@@ -38,9 +38,9 @@
                     <h3><strong>Player 1</strong></h3>
                     <h4><span id="p1-health">0/x</span> || <span id="p1-combo">Combo: 0</span> || <span id="p1-mana">mana: 0</span>
                         <div class="progress col-sm-3 ">
-                            mana
-                            <div class="progress-bar bg-success" role="progressbar" id="heroMana" aria-valuenow="0"
-                                aria-valuemin="0" aria-valuemax="100" style="transition-duration:300ms;"></div>
+                            
+                            <div class="progress-bar bg-info" role="progressbar" id="heroMana" aria-valuenow="0"
+                                aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </h4>
                     <p><strong>Arrowkeys</strong> to move, <strong>}</strong> to melee attack, <strong>{</strong>
@@ -80,9 +80,9 @@
                     <h4><strong>Player 2</strong></h4>
                     <h4><span id="p2-health">0/x</span> || <span id="p2-combo">Combo: 0</span> || <span id="p2-mana">mana: 0</span>
                     </h4>
-                    <div class="progress col-sm-3 ">
-                        mana
-                        <div class="progress-bar bg-success" role="progressbar" id="enemyMana" aria-valuenow="0"
+                    <div class="progress col-sm-3 p-0">
+                        
+                        <div class="progress-bar bg-info" role="progressbar" id="enemyMana" aria-valuenow="0"
                             aria-valuemin="0" aria-valuemax="100" style="transition-duration:300ms;"></div>
                     </div>
                     <p><strong>WASD</strong> to move, <strong>G</strong> to melee attack, <strong>H</strong> to throw
@@ -90,7 +90,7 @@
                 </div>
                 <div class="progress">
                     <div class="progress-bar bg-success" role="progressbar" id="enemyHealth" aria-valuenow="0"
-                        aria-valuemin="0" aria-valuemax="100" style="transition-duration:300ms;"></div>>
+                        aria-valuemin="0" aria-valuemax="100"></div>>
                 </div>
             </div>
         </div>
