fix wrongly assigned value

--- a/fighter/mods.html
+++ b/fighter/mods.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <h1 class="text-center">Fighter Mutations</h1>
         <p><span><a href="/fighter/?bouncingBetty">bouncingBetty</a> : Projectiles bounce off walls</span></p>
-        <p><span><a href="/fighter/?bouncingBetty&risingTension[=value]">risingTension</a> : Projectiles deal more damage with each bounce</span></p>
+        <p><span><a href="/fighter/?bouncingBetty&risingTension">risingTension[=value]</a> : Projectiles deal more damage with each bounce</span></p>
         <p><span><a href="/fighter/?repelPhys">repelPhys</a> : As a player nears death, there's a chance a projectile will bounce off of him</span></p>
         <p><span><a href="/fighter/?meleeOnly">meleeOnly</a> : Exactly what it says on the tin</span></p>
         <p><span><a href="/fighter/?bouncingBetty&staticBetty">staticBetty</a> : Projectiles that move in only one direction will always remain that way</span></p>
